--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 	his Ph.D. degree in electrical and computer engineering from University of Florida, Gainesville.
        </td>
 		</tr>
-	<tr style="vertical-align:middle" id="sp-minsoon">
+	<tr style="vertical-align:middle" id="sp-anu">
 			<td width="15%" align="center"><img src="./images/portrait-anu.jpg" height="auto"> </td>
 			<td width="85%" align="left">
         <strong><a href="https://www.linkedin.com/in/anu-ramamurthy-8352826/">Anu Ramamurthy</a></strong>, Associate Fellow, Microchip<br>
@@ -265,6 +265,27 @@
  	Kyoungmin is a senior system architect at Samsung S.LSI, specializing in chiplet architectures using advanced package technology.
 	With over 19 years of experience at Samsung S.LSI, he has a market proven track record in developing mobile soc product. 
 	Kyoungmin Lee took his Ph.D. degree from Sungkyunkwan University, Suwon, South Korea.
+       </td>
+		</tr>
+	<tr style="vertical-align:middle" id="sp-doy">
+			<td width="15%" align="center"><img src="./images/portrait-doy.jpg" height="auto"> </td>
+			<td width="85%" align="left">
+        <strong><a href="https://www.linkedin.com/in/doyoung-kim-8352826/">Doyoung Kim</a></strong>, AMD <br>
+ 	CV.
+       </td>
+		</tr>
+	<tr style="vertical-align:middle" id="sp-mahesh">
+			<td width="15%" align="center"><img src="./images/portrait-mahesh.jpg" height="auto"> </td>
+			<td width="85%" align="left" style="background-color:lightgray;">
+        <strong><a href="https://www.linkedin.com/in/mahesh-455137121/">Mahesh Maddury</a></strong>, Meta<br>
+ 	CV.
+       </td>
+		</tr>
+	<tr style="vertical-align:middle" id="sp-patil">
+			<td width="15%" align="center"><img src="./images/portrait-patil.jpg" height="auto"> </td>
+			<td width="85%" align="left">
+        <strong><a href="https://www.linkedin.com/in/patil-8352826/">D. Patil</a></strong>, Meta <br>
+ 	CV.
        </td>
 		</tr>
 	<!-- 
