Update Gab bio and agenda

--- a/index.html
+++ b/index.html
@@ -208,14 +208,19 @@
 			<td width="15%" align="center"><img src="./images/portrait-loh.jpg" height="auto"> </td>
 			<td width="85%" align="left">
         <strong><a href="https://www.linkedin.com/in/gabriel-gabe-loh-78ab4459/">Dr. Gabriel Loh</a></strong>, Senior Fellow, AMD <br>
- 	CV.
+ 	Gabriel H. Loh is a Senior Fellow in AMD Research and Advanced Development at Advanced Micro Devices, Inc. Gabe received his Ph.D. 
+	and M.S. in computer science from Yale University in 2002 and 1999, respectively, and his B.Eng. in electrical engineering from
+	the Cooper Union in 1998. Gabe was also a tenured associate professor in the College of Computing at the Georgia Institute of Technology,
+	a visiting researcher at Microsoft Research, and a senior researcher at Intel Corporation. He is a Fellow of the ACM and IEEE, 
+	recipient of ACM SIGARCH's Maurice Wilkes Award, Hall of Fame member for the MICRO, ISCA, and HPCA conferences, (co-)inventor 
+	on over one hundred US patents, and a recipient of the US National Science Foundation Young Faculty CAREER Award.
        </td>
 		</tr>
     <tr style="vertical-align:middle" id="sp-mallik">
 			<td width="15%" align="center"><img src="https://hipchips.github.io/micro2024/images/portrait-mallik.png" height="30%"> </td>
 			<td width="85%" align="left" style="background-color:lightgray;">
         <strong><a href="https://www.linkedin.com/in/amallik/">Dr. Arindam Mallik </a></strong>, Department Director, IMEC <br>
-       	Arindam Mallik leads Compute System Architecture (CSA) department at imec. He is a technologist enabling HW-SW co-design
+    Arindam Mallik leads Compute System Architecture (CSA) department at imec. He is a technologist enabling HW-SW co-design
 	at the cross-point of AI algorithms, computer architecture, and novel technology solutions. 
 	Arindam has spent the past 20 years pushing the boundaries of technology research to provide novel solutions with a direct
 	impact on the semiconductor industry. He has authored or co-authored more than 100 papers in international journals, 
@@ -328,10 +333,10 @@
 			<th width="50%">Title</th>
 			<th width="15%">Materials</th>
 		</tr>
-    <!-- 
+
 		<tr style="vertical-align:middle">
 			<td align="left">Open Remark<br><small>8:15-8:30am</small></td>
-			<td align="left"> <a href="#org-chester">Chester P.</a> & <a href="#org-peipei">Peipei Z.</a> <br> Co-Chairs</td>
+			<td align="left"> <a href="#org-dj">DJ</a> Co-Chairs</td>
 			<td align="left">  </td>
 			<td align="center"> </td>
 		</tr>
@@ -339,17 +344,17 @@
 			<td align="left"> Keynote <br><small>8:30-9:00am</small> </td>
 			<td align="left"> <a href="#sp-mallik">Arindam Mallik</a> <br> IMEC </td>
 			<td align="left"> The Evolution and Impact of Digital Computing Demand on the Semiconductor Industry</td>
-			<td align="center">  <a href="https://drive.google.com/file/d/1yJctBcWN9A-gGhjkILHj2uexXdC6EMQj/view"> Slides </a> <br>
+			<td align="center">  <!-- a href="https://drive.google.com/file/d/1yJctBcWN9A-gGhjkILHj2uexXdC6EMQj/view"> Slides </a --> <br>
 			</td>
 		</tr>
 		<tr style="vertical-align:middle">
 			<td align="left"> Invited Talk <br><small>9:00-9:20am</small> </td>
 			<td align="left"> <a href="#sp-park"> Fitzgerald Park </a> <br> Pusan National Univ </td>
 			<td align="left"> Pre-RTL Simulation Based Design Space Exploration for Multi-chiplet Dataflows </td>
-			<td align="center"> <a href="https://drive.google.com/file/d/1qkteyQokQixFBYq2__0UbH_d5E2VA4xp/view"> Slides </a> <br> 
-				
+			<td align="center"> <!-- a href="https://drive.google.com/file/d/1qkteyQokQixFBYq2__0UbH_d5E2VA4xp/view"> Slides </a --> <br> 
 			</td>
 		</tr>
+	<!--
 		<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left">Invited talk <br><small>9:20-9:40am</small> </td>
 			<td align="left"> <a href="#sp-ma"> Kaisheng Ma </a> <br> Tsinghua Univ </td>
