--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 		<tr style="vertical-align:middle">
 			<td align="left"> Keynote <br><small>2:45-3:20pm</small> </td>
 			<td align="left"> <a href="#sp-deb"> Debendra Sharma </a> <br> Intel </td>
-			<td align="left">UCIe<sup>TM</sup> 2.0: Progress towards open chiplet ecosystem</td>
+			<td align="left"> TBD </td>
 			<td align="center"> <!-- a href=""> Slides </a -->  <br> 
 			</td>
 		</tr>
@@ -443,7 +443,16 @@
 			<td align="center"> <!-- a href=""> Slides </a --> <br>
 			</td>
 		</tr>
-		<tr style="vertical-align:middle">
+	 	<tr style="vertical-align:middle">
+			<td align="left">Panel <br><small>3:45-4:45pm </small> </td>
+			<td align="left"> <a href="#sp-mahesh"> Panel Lists </a> <br> </td>
+			<td align="left"> Moderator: <br>
+				Aridam, Minsoon, Kyong Min, Gabriel, Chixiao
+			</td>
+			<td align="center"> <!-- a href=""> Slides </a --> <br>
+			</td>
+		</tr>
+		<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left"> Close Remark <br><small>4:45-5:00pm</small> </td>
 			<td align="left"> <a href="#org-weifeng"> Weifeng Zhang</a> <br> Co-Chair </td>
 			<td align="left"> TBD </td>
