Add some presentation titles

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 	Fitzgerald Sungkyung Park took his Ph.D. degree in electronics engineering from Seoul National University, Korea. 
 	He worked for Samsung Electronics, Electronics and Telecommunications Research Institute (ETRI), and Ericsson, Inc., USA, 
 	where he developed circuits for various transceivers. After joining Pusan National University, his research interests include design
-	and modeling of SoC, hardware accelerators, and virtual platforms for neural networks and 6G.
+	and modeling of SoCs with hardware accelerators, and development of virtual platforms for artificial intelligence and wireless communication.
        </td>
 		</tr>	
     <tr style="vertical-align:middle" id="sp-deb">
@@ -205,15 +205,15 @@
        </td>
 		</tr>
 	<tr style="vertical-align:middle" id="sp-loh">
-			<td width="15%" align="center"><img src="./images/portrait-loh.jpg" height="auto"> </td>
+			<td width="15%" align="center"><img src="./images/portrait-gab.jpg" height="auto"> </td>
 			<td width="85%" align="left">
         <strong><a href="https://www.linkedin.com/in/gabriel-gabe-loh-78ab4459/">Dr. Gabriel Loh</a></strong>, Senior Fellow, AMD <br>
- 	Gabriel H. Loh is a Senior Fellow in AMD Research and Advanced Development at Advanced Micro Devices, Inc. Gabe received his Ph.D. 
+	Gabriel H. Loh is a Senior Fellow in AMD Research and Advanced Development at Advanced Micro Devices, Inc. Gabe received his Ph.D. 
 	and M.S. in computer science from Yale University in 2002 and 1999, respectively, and his B.Eng. in electrical engineering from
 	the Cooper Union in 1998. Gabe was also a tenured associate professor in the College of Computing at the Georgia Institute of Technology,
 	a visiting researcher at Microsoft Research, and a senior researcher at Intel Corporation. He is a Fellow of the ACM and IEEE, 
-	recipient of ACM SIGARCH's Maurice Wilkes Award, Hall of Fame member for the MICRO, ISCA, and HPCA conferences, (co-)inventor 
-	on over one hundred US patents, and a recipient of the US National Science Foundation Young Faculty CAREER Award.
+	recipient of ACM SIGARCH's Maurice Wilkes Award, Hall of Fame member for the MICRO, ISCA, and HPCA conferences, and (co-)inventor
+	on over one hundred US patents.
        </td>
 		</tr>
     <tr style="vertical-align:middle" id="sp-mallik">
@@ -229,7 +229,7 @@
        </td>
 		</tr>
 	<tr style="vertical-align:middle" id="sp-ma">
-			<td width="15%" align="center"><img src="https://hipchips.github.io/hpca2023/portraits/portrait-kaisheng.png" height="auto"> </td>
+			<td width="15%" align="center"><img src="./images/portrait-ma.jpg" height="auto"> </td>
 			<td width="85%" align="left">
         <strong><a href="https://group.iiis.tsinghua.edu.cn/~maks/">Dr. Kaisheng Ma</a></strong>, Associate Professor, Tsinghua University <br>
  	Kaisheng is an Associate Professor in Institute for Interdisciplinary Information Sciences (IIIS), Tsinghua University. 
@@ -348,14 +348,14 @@
 		<tr style="vertical-align:middle">
 			<td align="left"> Invited Talk <br><small>9:05-9:30am</small> </td>
 			<td align="left"> <a href="#sp-park"> Fitzgerald Park </a> <br> Pusan National Univ </td>
-			<td align="left"> TBD </td>
+			<td align="left"> Design space exploration for multi-die dataflows based on network simulator NetTLMSim </td>
 			<td align="center"> <!-- a href=""> Slides </a --> <br> 
 			</td>
 		</tr>
 		<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left">Invited talk <br><small>9:30-9:55am</small> </td>
 			<td align="left"> <a href="#sp-anu"> Anu Rammurthy </a> <br> Microchip </td>
-			<td align="left"> TBD </td>
+			<td align="left"> Democratizing the Chiplet Ecosystem </td>
 			<td align="center"> <!-- a href=""> Slides </a -->  <br>
 				
 			</td>
@@ -376,7 +376,7 @@
 		<tr style="vertical-align:middle">
 			<td align="left"> Keynote <br><small>10:35-11:10am</small> </td>
 			<td align="left"> <a href="#sp-loh">Gabrial Loh</a> <br> AMD </td>
-			<td align="left"> TBD </td>
+			<td align="left"> The Rapid and Continued Evolution of Chiplet Technologies </td>
 			<td align="center">  <!-- a href=""> Slides </a --> <br>
 			</td>
 		</tr>
@@ -391,7 +391,7 @@
 	 	<tr style="vertical-align:middle">
 			<td align="left">Invited talk <br><small>11:35-12:00pm </small> </td>
 			<td align="left"> <a href="#sp-ma"> Kaisheng Ma </a> <br> Tsinghua Univ </td>
-			<td align="left"> TBD </td>
+			<td align="left"> Building Chiplet Ecosystem: Introducing Polar Bear Hub, NPU and GPU Dies </td>
 			<td align="center"> <!-- a href=""> Slides </a --> <br>
 				
 			</td>
@@ -405,7 +405,7 @@
 		<tr style="vertical-align:middle">
 			<td align="left">Keynote<br><small>1:00-1:35pm</small> </td>
 			<td align="left"> <a href="#sp-cx"> Chixiao Chen </a> <br> Fudan University </td>
-			<td align="left">  TBD </td>
+			<td align="left"> Scalable 3D Compute-in/near-Memory Systems with Reusable Active Interposer </td>
 			<td align="center"> <!-- a href=""> Slides </a -->  <br>
 			</td>
 		</tr>
@@ -418,7 +418,7 @@
 	 	<tr style="vertical-align:middle">
 			<td align="left">Invited talk <br><small>2:00-2:25pm </small> </td>
 			<td align="left"> <a href="#sp-minsoon"> Minsoon Hwang </a> <br> SK Hynix </td>
-			<td align="left"> TBD </td>
+			<td align="left"> Why need chiplet technology and how to implement for AI-driven memory applications? </td>
 			<td align="center"> <!-- a href=""> Slides </a --> <br>
 			</td>
 		</tr>
@@ -444,10 +444,9 @@
 			</td>
 		</tr>
 	 	<tr style="vertical-align:middle">
-			<td align="left">Panel <br><small>3:45-4:45pm </small> </td>
-			<td align="left"> <a href="#sp-mahesh"> Panel Lists </a> <br> </td>
-			<td align="left"> Moderator: <br>
-				Aridam, Minsoon, Kyong Min, Gabriel, Chixiao
+			<td align="left">Panel Discussion <br><small>3:45-4:45pm </small> </td>
+			<td align="left"> Panelists <br> </td>
+			<td align="left"> Moderator: Chester <br> Panelist: Aridam, Minsoon, Kyong Min, Gabriel, Chixiao
 			</td>
 			<td align="center"> <!-- a href=""> Slides </a --> <br>
 			</td>
