Add Kyoungmin's presentation

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 		<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left"> Invited talk <br><small>11:10-11:35am</small> </td>
 			<td align="left"> <a href="#sp-lee"> Kyoungmin Lee </a> <br> Samsung </td>
-			<td align="left"> TBD </td>
+			<td align="left"> Challenges of Chiplet for Mobile Application </td>
 			<td align="center"> <!-- a href=""> Slides </a --> <br> 
 				
 			</td>
