Highlight the panel

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 			</td>
 		</tr>
 	 	<tr style="vertical-align:middle">
-			<td align="left">Panel Discussion <br><small>3:45-4:45pm </small> </td>
+			<td align="left" style="background-color:lightgreen">Panel Discussion <br><small>3:45-4:45pm </small> </td>
 			<td align="left"> Panelists <br> </td>
 			<td align="left"> Moderator: Chester <br> Panelist: Aridam, Minsoon, Kyong Min, Gabriel, Chixiao
 			</td>
