--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 		<tr style="vertical-align:middle">
 			<td align="left"> Invited Talk <br><small>9:05-9:30am</small> </td>
 			<td align="left"> <a href="#sp-park"> Fitzgerald Park </a> <br> Pusan National Univ </td>
-			<td align="left"> Design space exploration for multi-die dataflows based on network simulator NetTLMSim </td>
+			<td align="left"> Design space exploration with reinforcement learning for multi-die dataflows based on network simulator NetTLMSim </td>
 			<td align="center"> <!-- a href=""> Slides </a --> <br> 
 			</td>
 		</tr>
@@ -446,7 +446,7 @@
 	 	<tr style="vertical-align:middle">
 			<td align="left" style="background-color:lightgreen">Panel Discussion <br><small>3:45-4:45pm </small> </td>
 			<td align="left"> Panelists <br> </td>
-			<td align="left"> Moderator: Chester <br> Panelist: Aridam, Minsoon, Kyong Min, Gabriel, Chixiao
+			<td align="left"> Moderator: Chester <br> Panelist: Arindam, Minsoon, Kyoungmin, Gabriel, Chixiao
 			</td>
 			<td align="center"> <!-- a href=""> Slides </a --> <br>
 			</td>
