--- a/index.html
+++ b/index.html
@@ -454,8 +454,8 @@
 		<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left"> Close Remark <br><small>4:45-5:00pm</small> </td>
 			<td align="left"> <a href="#org-weifeng"> Weifeng Zhang</a> <br> Co-Chair </td>
-			<td align="left"> TBD </td>
-			<td align="center"> <! a href=""> Slides </a --> <br>
+			<td align="left">  </td>
+			<td align="center"> <!-- a href=""> Slides </a --> <br>
 			</td>
 		</tr>
   </tbody>
