--- a/index.html
+++ b/index.html
@@ -293,20 +293,6 @@
  	CV.
        </td>
 		</tr>
-	<!-- 
-    <tr style="vertical-align:middle" id="sp-cao">
-			<td width="15%" align="center"><img src="./images/portrait-lihong.png" height="auto" </td>
-			<td width="20%" align="left">
-        <strong><a href="https://www.linkedin.com/in/lihongcao/">Lihong Cao</a></strong>, Sr. Director, ASE Group<br>
-    Lihong Cao is a senior director of engineering/technical marketing at ASE US Inc. 
-	She has comprehensive experience driving new product and advanced packaging technology development, new product introduction,
-	quality and reliability, Fab/OSATs processes and root cause analysis. Responsible for advanced packaging architecture, chiplets
-	interconnect, advanced packaging technology development (2.5D/3D, FOCoS, Embedded Bridge, SIP, SiPh) for Chiplets and
-	Heterogeneous Integration, Technology promotion, Strategic planning and Business engagement. She leads chiplets Die to Die
-	interconnect standardization effort in UCIe (Universal Chiplets Interconnect Express) consortium as Board of Director of ASE.
-       </td>
-		</tr>
-		-->
       </tbody>
 </table>	
 		</p>
@@ -334,7 +320,7 @@
 		</tr>
 		<tr style="vertical-align:middle">
 			<td align="left">Open Remark<br><small>8:15-8:30am</small></td>
-			<td align="left"> <a href="#org-dj">Dharmesh Jain</a> <br> Co-Chairs</td>
+			<td align="left"> <a href="#org-dj">Dharmesh Jain</a> <br> Co-Chair </td>
 			<td align="left">  </td>
 			<td align="center"> </td>
 		</tr>
@@ -446,7 +432,7 @@
 	 	<tr style="vertical-align:middle">
 			<td align="left" style="background-color:lightgreen">Panel Discussion <br><small>3:45-4:45pm </small> </td>
 			<td align="left"> Panelists <br> </td>
-			<td align="left"> Moderator: Chester <br> Panelist: Arindam, Minsoon, Kyoungmin, Gabriel, Chixiao
+			<td align="left"> Moderator: <a href="#org-chester">Prof. Chester Park</a> <br> Panelist: Arindam Mallik, Minsoon Hwang, Kyoungmin Lee, Gabriel Loh, Chixiao Chen
 			</td>
 			<td align="center"> <!-- a href=""> Slides </a --> <br>
 			</td>
