Update the persentation for Arindam

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 		<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left"> Keynote <br><small>8:30-9:05am</small> </td>
 			<td align="left"> <a href="#sp-mallik">Arindam Mallik</a> <br> IMEC </td>
-			<td align="left"> TBD </td>
+			<td align="left"> Chiplet-Based Architectures for Next-Generation Automotive Systems </td>
 			<td align="center">  <!-- a href=""> Slides </a --> <br>
 			</td>
 		</tr>
