Add presentation titles for DJ and Weifeng

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 		<tr style="vertical-align:middle">
 			<td align="left">Open Remark<br><small>8:15-8:30am</small></td>
 			<td align="left"> <a href="#org-dj">Dharmesh Jain</a> <br> Co-Chair </td>
-			<td align="left">  </td>
+			<td align="left"> Silicon to Superclusters: Building Meta’s AI Infrastructure </td>
 			<td align="center"> </td>
 		</tr>
 		<tr style="background-color:lightgray; vertical-align:middle">
@@ -440,7 +440,7 @@
 		<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left"> Close Remark <br><small>4:45-5:00pm</small> </td>
 			<td align="left"> <a href="#org-weifeng"> Weifeng Zhang</a> <br> Co-Chair </td>
-			<td align="left">  </td>
+			<td align="left"> AI Computing Morphability: from chiplet, server, to super node </td>
 			<td align="center"> <!-- a href=""> Slides </a --> <br>
 			</td>
 		</tr>
