--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       where he is currently working on algorithm and architecture co-optimizations using virtual platform based system simulations.
       In particular, he has been developing a new system simulator, NetTLMSim, that facilitates the system-level optimizations of
       heterogeneous chiplet system dataflow. Before joining academia, he was with Samsung Electronics, Giheung, South Korea, and
-      Ericsson Research, CA. He received the Ph.D. degree in electrical engineering from the Korea Advanced Institute of Science and Technology (KAIST), Daejeon.
+      Ericsson Research, CA. He received the Ph.D. degree in electrical engineering from the Korea Advanced Institute of Science and Technology (KAIST), Daejeon, South Korea.
 		</p>
         </h5>   
       <h5 class="w3-text-black" id="org-weifeng">
