--- a/index.html
+++ b/index.html
@@ -266,10 +266,8 @@
 	<tr style="vertical-align:middle" id="sp-lee">
 			<td width="15%" align="center"><img src="./images/portrait-lee.jpg" height="auto"> </td>
 			<td width="85%" align="left" style="background-color:lightgray;">
-        <strong><a href="https://www.linkedin.com/in/kyoungmin-lee-455137121/">Dr. Kyoungmin Lee</a></strong>, Sr. System Architect, Samsung<br>
- 	Kyoungmin is a senior system architect at Samsung S.LSI, specializing in chiplet architectures using advanced package technology.
-	With over 19 years of experience at Samsung S.LSI, he has a market proven track record in developing mobile soc product. 
-	Kyoungmin Lee took his Ph.D. degree from Sungkyunkwan University, Suwon, South Korea.
+        <strong><a href="https://www.linkedin.com/in/kyoungmin-lee-455137121/">Dr. Kyoungmin Lee</a></strong>, System Architect, Samsung S.LSI<br>
+ 	Dr. Kyoungmin Lee is a System Architect at Samsung S.LSI. He has over 19 years of experience at Samsung S.LSI, where he has developed numerous commercially successful SOC products. His recent work focuses on chiplet architectures using advanced package technology to create innovative platform technologies that address the inherent limitations of traditional mobile SOC. Kyoungmin Lee took his Ph.D. degree from Sungkyunkwan University, Suwon, South Korea.
        </td>
 		</tr>
 	<tr style="vertical-align:middle" id="sp-doy">
