Update Patil's info

--- a/index.html
+++ b/index.html
@@ -289,8 +289,13 @@
 	<tr style="vertical-align:middle" id="sp-patil">
 			<td width="15%" align="center"><img src="./images/portrait-patil.jpg" height="auto"> </td>
 			<td width="85%" align="left">
-        <strong><a href="https://www.linkedin.com/in/patil-8352826/">D. Patil</a></strong>, Meta <br>
- 	CV.
+        <strong><a href="https://www.linkedin.com/in/dinesh-patil-93035b4/">Dr. Dinesh Patil</a></strong>, SoC architect, Meta <br>
+ 	Dinesh Patil (S’03–M’07) received the B.Tech. degree in EE from the Indian Institute of Technology, Mumbai, 
+	and the Ph.D. from Stanford University, Stanford, CA, in 2008. He is currently the SoC architect for the Augmented Reality chips in Meta.
+	From 2007 to 2019, Dinesh worked at SUN Labs, Rambus, Altera, and Intel. His work includes Optimization techniques for 
+	Energy-Efficient digital circuits, Transceivers for wired and optical interconnects (Si Photonics, VCSELs, DDR, D2D, 
+	High speed Serial protocols such as PCIe, Ethernet, etc), dc–dc and power converter design and SoC Architecture. 
+	He has over 25 patents in these areas.
        </td>
 		</tr>
       </tbody>
@@ -348,8 +353,8 @@
 		</tr>
 		<tr style="vertical-align:middle">
 			<td align="left">Invited talk <br><small>9:55-10:20am</small> </td>
-			<td align="left"> <a href="#sp-patil"> D. Patil </a> <br> Meta </td>
-			<td align="left"> TBD </td>
+			<td align="left"> <a href="#sp-patil"> Dinesh. Patil </a> <br> Meta </td>
+			<td align="left"> D2D interconnects for Wearable devices </td>
 			<td align="center"> <!-- a href=""> Slides </a --> <br>
 			</td>
 		</tr>
