--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       where he is currently working on algorithm and architecture co-optimizations using virtual platform based system simulations.
       In particular, he has been developing a new system simulator, NetTLMSim, that facilitates the system-level optimizations of
       heterogeneous chiplet system dataflow. Before joining academia, he was with Samsung Electronics, Giheung, South Korea, and
-      Ericsson Research, CA. He received the Ph.D. degree in electrical engineering from the Korea Advanced Institute of Science and Technology (KAIST), Daejeon.
+      Ericsson Research, CA. He received the Ph.D. degree in electrical engineering from the Korea Advanced Institute of Science and Technology (KAIST), Daejeon, South Korea.
 		</p>
         </h5>   
       <h5 class="w3-text-black" id="org-weifeng">
@@ -266,7 +266,7 @@
 	<tr style="vertical-align:middle" id="sp-lee">
 			<td width="15%" align="center"><img src="./images/portrait-lee.jpg" height="auto"> </td>
 			<td width="85%" align="left" style="background-color:lightgray;">
-        <strong><a href="https://www.linkedin.com/in/kyoungmin-lee-455137121/">Dr. Kyoungmin Lee</a></strong>, Sr. System Architect, Samsung<br>
+        <strong><a href="https://www.linkedin.com/in/kyoungmin-lee-455137121/">Dr. Kyoungmin Lee</a></strong>, System Architect, Samsung S.LSI<br>
 	Dr. Kyoungmin Lee is a System Architect at Samsung S.LSI. He has over 19 years of experience at Samsung S.LSI, where he has developed
 	numerous commercially successful SOC products. His recent work focuses on chiplet architectures using advanced package technology
 	to create innovative platform technologies that address the inherent limitations of traditional mobile SOC. Kyoungmin Lee received
