--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 	<tr style="vertical-align:middle" id="sp-lee">
 			<td width="15%" align="center"><img src="./images/portrait-lee.jpg" height="auto"> </td>
 			<td width="85%" align="left" style="background-color:lightgray;">
-        <strong><a href="https://www.linkedin.com/in/kyoungmin-lee-455137121/">Dr. Kyoungmin Lee</a></strong>, Sr. System Architect, Samsung<br>
+        <strong><a href="https://www.linkedin.com/in/kyoungmin-lee-455137121/">Dr. Kyoungmin Lee</a></strong>, System Architect, Samsung S.LSI<br>
 	Dr. Kyoungmin Lee is a System Architect at Samsung S.LSI. He has over 19 years of experience at Samsung S.LSI, where he has developed
 	numerous commercially successful SOC products. His recent work focuses on chiplet architectures using advanced package technology
 	to create innovative platform technologies that address the inherent limitations of traditional mobile SOC. Kyoungmin Lee received
