--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 	 	<tr style="vertical-align:middle">
 			<td align="left" style="background-color:lightgreen">Panel Discussion <br><small>3:45-4:45pm </small> </td>
 			<td align="left"> Panelists <br> </td>
-			<td align="left"> Moderator: <a href="#org-chester">Prof. Chester Park</a> <br> Panelist: Arindam Mallik, Minsoon Hwang, Kyoungmin Lee, Gabriel Loh, Chixiao Chen
+			<td align="left"> Moderator: <a href="#org-chester">Prof. Chester Park</a> <br> Panelist: Arindam Mallik, Minsoon Hwang, Gabriel Loh, Chixiao Chen
 			</td>
 			<td align="center"> <!-- a href=""> Slides </a --> <br>
 			</td>
