--- a/index.html
+++ b/index.html
@@ -310,8 +310,9 @@
     <div class="w3-content">
       <h2>Schedule</h2>
         <h5 class="w3-text-black">
-          <p> Lotte Hotel, Seoul, Korea <br>
-	      October 19<sup>th</sup>, 2025, 8:00am - 5:00pm <br>
+          <p> Lotte Hotel Seoul, Bell-vue (36F) <br>
+		  Seoul, South Korea <br>
+	      October 19<sup>th</sup>, 2025, 8:00am - 5:00pm KST <br>
 	      <!-- <strong>Zoom Call: <a href="https://us06web.zoom.us/j/85193184152?pwd=9aq5bbY7tfIs6ABj5UmaDVGbfxUaGr.1"> Join the meeting </a>  </strong> 
 		(Meeting ID: 851 9318 4152, Passcode: 765776)       -->
 	  </p>
@@ -461,9 +462,9 @@
     <div class="w3-content">
       <h2>Venue</h2>
         <h5 class="w3-text-black">
-          <p>HiPChips Conference is colocated with &nbsp;<a href="https://microarch.org/micro58/" style="color: blue">MICRO 2025</a><br>
+          <p>HiPChips Conference is colocated with &nbsp;<a href="https://microarch.org/micro58/"style="color: blue">MICRO 2025</a><br>
              The 58<sup>th</sup> IEEE/ACM International Symposium on Microarchitecture® <br>
-	     <br>
+	         Lotte Hotel Seoul, Bell-vue (36F)<br>
              Seoul, South Korea
           </p>
         </h5>
