--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 	 	<tr style="vertical-align:middle">
 			<td align="left" style="background-color:lightgreen">Panel Discussion <br><small>3:45-4:45pm </small> </td>
 			<td align="left"> Panelists <br> </td>
-			<td align="left"> Progress-to-date & technology challenges for high-performance chiplet/interconnect architectures <br> Moderator: <a href="#org-chester"> Prof. Chester Park</a> <br> Panelist: Arindam Mallik, Minsoon Hwang, Gabriel Loh, Chixiao Chen
+			<td align="left"> Progress-to-date & technology challenges for high-performance chiplet/interconnect architectures <br><br> Moderator: <a href="#org-chester"> Prof. Chester Park</a> <br> Panelist: Arindam Mallik, Minsoon Hwang, Gabriel Loh, Chixiao Chen
 			</td>
 			<td align="center"> <!-- a href=""> Slides </a --> <br>
 			</td>
