Update Mahesh profile

--- a/index.html
+++ b/index.html
@@ -283,8 +283,10 @@
 	<tr style="vertical-align:middle" id="sp-mahesh">
 			<td width="15%" align="center"><img src="./images/portrait-mahesh.jpg" height="auto"> </td>
 			<td width="85%" align="left" style="background-color:lightgray;">
-        <strong><a href="https://www.linkedin.com/in/mahesh-455137121/">Mahesh Maddury</a></strong>, Meta<br>
- 	CV.
+        <strong><a href="https://www.linkedin.com/in/mahesh-455137121/">Mahesh Maddury</a></strong>, MTIA Lead Architect, Meta<br>
+ 	Mahesh Maddury is the lead architect for MTIA at Meta. Prior to his current role, he has held senior technical leadership roles
+	at early-stage startups and established companies like Cisco, Brocade and Intel where he has delivered multiple high-performance ASICs.
+	Mahesh holds an MSEE from the University of Colorado, Boulder and is the author of more than 25 patents.
        </td>
 		</tr>
 	<tr style="vertical-align:middle" id="sp-patil">
