Update the title for the close remark

--- a/index.html
+++ b/index.html
@@ -441,7 +441,9 @@
 	 	<tr style="vertical-align:middle">
 			<td align="left" style="background-color:lightgreen">Panel Discussion <br><small>3:45-4:45pm </small> </td>
 			<td align="left"> Panelists <br> </td>
-			<td align="left"> Progress-to-date & technology challenges for high-performance chiplet/interconnect architectures <br><br> Moderator: <a href="#org-chester"> Prof. Chester Park</a> <br> Panelist: Arindam Mallik, Minsoon Hwang, Gabriel Loh, Chixiao Chen, Weifeng Zhang
+			<td align="left"> <font color="blue">Progress-to-date & technology challenges for high-performance chiplet/interconnect architectures</font> <br>
+				<br> Moderator: <a href="#org-chester"> Prof. Chester Park</a> 
+				<br> Panelists: Arindam Mallik, Minsoon Hwang, Gabriel Loh, Chixiao Chen, Weifeng Zhang
 			</td>
 			<td align="center"> <!-- a href=""> Slides </a --> <br>
 			</td>
@@ -449,7 +451,7 @@
 		<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left"> Close Remark <br><small>4:45-5:00pm</small> </td>
 			<td align="left"> <a href="#org-weifeng"> Weifeng Zhang</a> <br> Co-Chair </td>
-			<td align="left"> AI Computing Morphability: from chiplet, server, to super node </td>
+			<td align="left">AI Computing Morphability vs. Sustainability: from chiplet, server, to super node </td>
 			<td align="center"> <!-- a href=""> Slides </a --> <br>
 			</td>
 		</tr>
