--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 	 	<tr style="vertical-align:middle">
 			<td align="left" style="background-color:lightgreen">Panel Discussion <br><small>3:45-4:45pm </small> </td>
 			<td align="left"> Panelists <br> </td>
-			<td align="left"> <font color="blue">Progress-to-date & technology challenges for high-performance chiplet/interconnect architectures</font> <br>
+			<td align="left"> <font color="blue">"Democratizing the chiplet architecture: what are the challenges?"</font> <br>
 				<br> Moderator: <a href="#org-chester"> Prof. Chester Park</a> 
 				<br> Panelists: Arindam Mallik, Minsoon Hwang, Gabriel Loh, Chixiao Chen, Weifeng Zhang
 			</td>
