Revise Doyoung Kim's information and talk details
Updated Doyoung Kim's title and added a brief biography.

--- a/index.html
+++ b/index.html
@@ -276,8 +276,10 @@
 	<tr style="vertical-align:middle" id="sp-doy">
 			<td width="15%" align="center"><img src="./images/portrait-doy.jpg" height="auto"> </td>
 			<td width="85%" align="left">
-        <strong><a href="https://www.linkedin.com/in/doyoung-kim-8352826/">Doyoung Kim</a></strong>, AMD <br>
- 	CV.
+        <strong><a href="https://www.linkedin.com/in/doyoung-kim-8352826/">Doyoung Kim</a></strong>, Senior Solutions Architect, AMD <br>
+ 	Doyoung Kim has over 25 years of experience working at various companies including IBM, EMC, and NVIDIA, 
+	supporting roles such as Cloud Architect, HPC Cluster Design, and Datacenter Accelerator Solutions Architect. 
+	He is currently serving as a Senior Solutions Architect at AMD, providing AI datacenter solutions support for various customers in Korea.
        </td>
 		</tr>
 	<tr style="vertical-align:middle" id="sp-mahesh">
@@ -407,7 +409,7 @@
 		<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left">Invited talk<br><small>1:35-2:00pm</small> </td>
 			<td align="left"> <a href="#sp-doy"> Doyoung Kim </a> <br> AMD </td>
-			<td align="left"> TBD </td>
+			<td align="left"> UALink update </td>
 			<td align="center">  <!-- a href=""> Slides </a -->  </td>
 		</tr>
 	 	<tr style="vertical-align:middle">
