Update Zoom call link and Mahesh presentation title

--- a/index.html
+++ b/index.html
@@ -317,8 +317,7 @@
           <p> Lotte Hotel Seoul, Bell-vue (36F) <br>
 		  Seoul, South Korea <br>
 	      October 19<sup>th</sup>, 2025, 8:00am - 5:00pm KST <br>
-	      <!-- <strong>Zoom Call: <a href="https://us06web.zoom.us/j/85193184152?pwd=9aq5bbY7tfIs6ABj5UmaDVGbfxUaGr.1"> Join the meeting </a>  </strong> 
-		(Meeting ID: 851 9318 4152, Passcode: 765776)       -->
+	      <strong>Zoom Call: <a href="https://www.google.com/maps/search/?api=1&query=https%3A%2F%2Fus06web.zoom.us%2Fj%2F82902019368%3Fpwd%3DeNNNc1zC7aboeIeqgLaSCueOBNVaiZ.1"> Join the online meeting </a>  </strong> 
 	  </p>
           <p  style="font-size:8px; ">	  
  <table cellpadding="5" cellspacing="0" style="width:100%">
@@ -436,7 +435,7 @@
 	 	<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left">Invited talk <br><small>3:20-3:45pm </small> </td>
 			<td align="left"> <a href="#sp-mahesh"> Mahesh Maddury </a> <br> Meta </td>
-			<td align="left"> TBD </td>
+			<td align="left"> High Bandwidth Flash Implication to AI Workloads </td>
 			<td align="center"> <!-- a href=""> Slides </a --> <br>
 			</td>
 		</tr>
