Fix Zoom link formatting in index.html

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
           <p> Lotte Hotel Seoul, Bell-vue (36F) <br>
 		  Seoul, South Korea <br>
 	      October 19<sup>th</sup>, 2025, 8:00am - 5:00pm KST <br>
-	      <strong>Zoom Call: <a href="https://www.google.com/maps/search/?api=1&query=https%3A%2F%2Fus06web.zoom.us%2Fj%2F82902019368%3Fpwd%3DeNNNc1zC7aboeIeqgLaSCueOBNVaiZ.1"> Join the online meeting </a>  </strong> 
+	      <strong>Zoom Call: &nbsp; <a href="https://us06web.zoom.us/j/82902019368?pwd=eNNNc1zC7aboeIeqgLaSCueOBNVaiZ.1"> Join the online meeting </a>  </strong> 
 	  </p>
           <p  style="font-size:8px; ">	  
  <table cellpadding="5" cellspacing="0" style="width:100%">
