Add Olivia Wu's profile to index.html

--- a/index.html
+++ b/index.html
@@ -303,7 +303,17 @@
 	He has over 25 patents in these areas.
        </td>
 		</tr>
-      </tbody>
+	<tr style="vertical-align:middle" id="sp-oliv">
+			<td width="15%" align="center"><img src="./images/portrait-olivia.jpg" height="auto"> </td>
+			<td width="85%" align="left" style="background-color:lightgray;">
+        <strong><a href="https://www.linkedin.com/in/wuolivia/">Olivia Wu</a></strong>, MTIA Design Lead, Meta <br>
+ 	Olivia is the MTIA Design Lead at Meta, where she leads the design and development of AI inference and training accelerators
+	tailored for Meta’s data center workloads. Prior to Meta, she held senior technical leadership roles at Intel, Nervana Systems,
+	Cisco, Pocket Networks, and Sun Microsystems, delivering multiple large-scale, high-performance server processors, networking
+	and AI training ASICs. She holds an MSEE from Purdue University and 16 patents.
+       </td>
+		</tr>
+	</tbody>
 </table>	
 		</p>
 	</h5>
