Add invited talk details and adjust coffee break time

--- a/index.html
+++ b/index.html
@@ -428,8 +428,15 @@
 			<td align="center"> <!-- a href=""> Slides </a --> <br>
 			</td>
 		</tr>
+		<tr style="vertical-align:middle">
+			<td align="left">Invited talk <br><small>2:25-2:40pm </small> </td>
+			<td align="left"> <a href="#sp-oliv"> Olivia Wu </a> <br> Meta </td>
+			<td align="left"> Chiplet Unleased: The Hidden Cost of D2D in AI Accelerators </td>
+			<td align="center"> <!-- a href=""> Slides </a --> <br>
+			</td>
+		</tr>
 		<tr style="background-color:lightgray; vertical-align:middle">
-			<td align="left"> Coffee Break <br><small>2:30-2:45pm</small> </td>
+			<td align="left"> Coffee Break <br><small>2:40-2:45pm</small> </td>
 			<td align="left"> &nbsp; </td>
 			<td align="left"> &nbsp; </td>
 			<td align="center"> &nbsp; </td>
