Fix typo in keynote speaker's name

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 		</tr>
 		<tr style="vertical-align:middle">
 			<td align="left"> Keynote <br><small>10:35-11:10am</small> </td>
-			<td align="left"> <a href="#sp-loh">Gabrial Loh</a> <br> AMD </td>
+			<td align="left"> <a href="#sp-loh">Gabriel Loh</a> <br> AMD </td>
 			<td align="left"> The Rapid and Continued Evolution of Chiplet Technologies </td>
 			<td align="center">  <!-- a href=""> Slides </a --> <br>
 			</td>
