Update contact information and venue description

--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
           
     <h5 class="w3-text-black">
         <p>
-          <!-- For any submission information, please send your requests to organizers at <strong> hipchips2023@gmail.com</strong>, 
-	        due by <font color="red"> April 30th </font>.   -->
+         Contact us at <strong> hipchips2023@gmail.com</strong> for questions or any other information.
         </p>
   </h5>
   </div>
@@ -484,7 +483,7 @@
     <div class="w3-content">
       <h2>Venue</h2>
         <h5 class="w3-text-black">
-          <p>HiPChips Conference is colocated with &nbsp;<a href="https://microarch.org/micro58/"style="color: blue">MICRO 2025</a><br>
+          <p>The HiPChips Conference is colocated with &nbsp;<a href="https://microarch.org/micro58/"style="color: blue">MICRO 2025</a><br>
              The 58<sup>th</sup> IEEE/ACM International Symposium on Microarchitecture® <br>
 	         Lotte Hotel Seoul, Bell-vue (36F)<br>
              Seoul, South Korea
