Add Olivia Wu to panelists list

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 			<td align="left"> Panelists <br> </td>
 			<td align="left"> <font color="blue">"Democratizing the chiplet architecture: what are the challenges?"</font> <br>
 				<br> Moderator: <a href="#org-chester"> Prof. Chester Park</a> 
-				<br> Panelists: Arindam Mallik, Minsoon Hwang, Gabriel Loh, Chixiao Chen, Weifeng Zhang
+				<br> Panelists: Arindam Mallik, Minsoon Hwang, Gabriel Loh, Chixiao Chen, Weifeng Zhang, Olivia Wu
 			</td>
 			<td align="center"> <!-- a href=""> Slides </a --> <br>
 			</td>
