--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
       <h2>Organizers</h2>
         <h5 class="w3-text-black" id="org-chester">
           <p> <img style="float:left;  margin-right: 20px; margin-top: 10px;" src="https://hipchips.github.io/micro2024/images/portrait-park.jpg"  width="auto">
-		  <strong> <a href="https://www.linkedin.com/in/chestersungchungpark/">Chester Park</a>, Konkuk University</strong> <br>
-      Dr. Chester Park is a Professor in the Department of Electrical and Electronics Engineering, Konkuk University, South Korea,
-      where he is currently working on algorithm and architecture co-optimizations using virtual platform based system simulations.
+		  <strong> <a href="https://www.linkedin.com/in/chestersungchungpark/">Chester S. Park</a>, Konkuk University</strong> <br>
+      Dr. Chester Sungchung Park is a Professor in the Department of Electrical and Electronics Engineering, Konkuk University, South Korea,
+      where he is currently working on algorithm-architecture co-optimizations using virtual prototype based system simulations.
       In particular, he has been developing a new system simulator, NetTLMSim, that facilitates the system-level optimizations of
       heterogeneous chiplet system dataflow. Before joining academia, he was with Samsung Electronics, Giheung, South Korea, and
       Ericsson Research, CA. He received the Ph.D. degree in electrical engineering from the Korea Advanced Institute of Science and Technology (KAIST), Daejeon, South Korea.
@@ -459,7 +459,7 @@
 			<td align="left" style="background-color:lightgreen">Panel Discussion <br><small>3:45-4:45pm </small> </td>
 			<td align="left"> Panelists <br> </td>
 			<td align="left"> <font color="blue">"Democratizing the chiplet architecture: what are the challenges?"</font> <br>
-				<br> Moderator: <a href="#org-chester"> Prof. Chester Park</a> 
+				<br> Moderator: <a href="#org-chester"> Prof. Chester S. Park</a> 
 				<br> Panelists: Arindam Mallik, Minsoon Hwang, Gabriel Loh, Chixiao Chen, Weifeng Zhang, Olivia Wu
 			</td>
 			<td align="center"> <!-- a href=""> Slides </a --> <br>
